--- a/LOAD_UNPACKED/popup.html
+++ b/LOAD_UNPACKED/popup.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>wplacer</title>
+    <title>KGlacer</title>
     <link rel="stylesheet" href="popup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="header">
         <img src="icons/favicon-32x32.png" class="logo">
-        <h3>wplacer</h3>
+        <h3>KGlacer</h3>
     </div>
 
     <!-- Status Indicator -->
