--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="styles/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.11.0/axios.min.js"
         referrerpolicy="no-referrer"></script>
-    <title>KGlacer</title>
+    <title>KGlacer v1.0</title>
 </head>
 
 <body>
     <div class="container">
-        <h1><img src="icons/favicon.png" alt="KGlacer logo">KGlacer</h1>
+        <header class="app-header">
+            <h1><img src="icons/favicon.png" alt="KGlacer logo">KGlacer</h1>
+            <p class="app-subtitle">Control panel de automatización para wplace</p>
+            <span class="version-badge">Version 1.0</span>
+        </header>
 
         <div id="main">
             <button id="openManageUsers" class="primary-button"><img src="icons/manageUsers.svg" alt="">Manage
@@ -22,12 +26,12 @@
                 Template</button>
             <button id="openManageTemplates" class="primary-button"><img src="icons/manageTemplates.svg" alt="">Manage
                 Templates</button>
-            <button id="openLogsViewer" class="primary-button"><img src="icons/code.svg" alt="">View Logs</button>
+            <button id="openLogsViewer" class="primary-button"><img src="icons/code.svg" alt="">System Logs</button>
             <button id="openSettings" class="primary-button"><img src="icons/settings.svg" alt="">Settings</button>
         </div>
 
         <div id="logsViewer" style="display: none;">
-            <h2>Realtime Logs Viewer</h2>
+            <h2>Realtime System Logs</h2>
             <input id="logsSearchInput" class="logs-search" type="text" placeholder="Search text...">
             <div class="logs-controls">
                 <button id="showLogsBtn" class="secondary-button">Logs</button>
@@ -48,7 +52,7 @@
         </div>
 
         <div id="manageUsers" style="display: none;">
-            <h2>Add/Manage Users</h2>
+            <h2>User Management</h2>
             <form id="userForm">
                 <label for="jcookie">JWT Cookie (j)</label>
                 <input type="password" id="jcookie" required>
@@ -86,7 +90,7 @@ token3" style="width:100%; margin-top:8px;"></textarea>
         </div>
 
         <div id="addTemplate" style="display: none;">
-            <h2 id="templateFormTitle">Add Template</h2>
+            <h2 id="templateFormTitle">Create Template</h2>
             <div class="info-box">
                 <b>Tip:</b> For best results, process your image through the <a
                     href="https://pepoafonso.github.io/color_converter_wplace/" target="_blank"
@@ -182,10 +186,10 @@ token3" style="width:100%; margin-top:8px;"></textarea>
         </div>
 
         <div id="manageTemplates" style="display: none;">
-            <h2>Manage Templates</h2>
+            <h2>Template Operations</h2>
             <div class="template-actions-all">
-                <button id="startAll" class="primary-button"><img src="icons/playAll.svg" alt="">Start All</button>
-                <button id="stopAll" class="secondary-button"><img src="icons/pauseAll.svg" alt="">Stop All</button>
+                <button id="startAll" class="primary-button"><img src="icons/playAll.svg" alt="">Start All Templates</button>
+                <button id="stopAll" class="secondary-button"><img src="icons/pauseAll.svg" alt="">Stop All Templates</button>
             </div>
             <div id="templateList"></div>
             <button onclick="changeTab('main');" class="secondary-button"><img src="icons/return.svg"
@@ -193,7 +197,7 @@ token3" style="width:100%; margin-top:8px;"></textarea>
         </div>
 
         <div id="settings" style="display: none;">
-            <h2>Settings</h2>
+            <h2>General Settings</h2>
 
             <div class="setting-toggle">
                 <label for="openBrowserOnStart">Open Browser on Startup</label>
