chore: enforce prestart tests for painting pipeline contracts

--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,8 @@ token3" style="width:100%; margin-top:8px;"></textarea>
 
             <label for="drawingDirectionSelect">Drawing Direction</label>
             <select id="drawingDirectionSelect">
-                <option value="natural">Natural (Recommended)</option>
+                <option value="wavefront">Wavefront (New Recommended)</option>
+                <option value="natural">Natural (Legacy)</option>
                 <option value="down">Down (Top to Bottom)</option>
                 <option value="up">Up (Bottom to Top)</option>
                 <option value="left">Left to Right</option>
