Restore Camoufox extension token handshake before paint

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
             <form id="userForm">
                 <label for="jcookie">JWT Cookie (j)</label>
                 <input type="password" id="jcookie" required>
-                <label for="scookie">Session Cookie (s) [optional]</label>
+                <label for="scookie">Cloudflare Cookie (_cfuvid) [optional]</label>
                 <input type="password" id="scookie">
                 <button type="submit" id="submitUser" class="primary-button"><img src="icons/addUser.svg" alt="">Add
                     User</button>
