--- a/public/index.html
+++ b/public/index.html
@@ -259,6 +259,10 @@ token3" style="width:100%; margin-top:8px;"></textarea>
             <input type="number" id="accountCooldown" min="0" value="20">
             <label for="purchaseCooldown">Purchase Cooldown (seconds)</label>
             <input type="number" id="purchaseCooldown" min="0" value="5">
+            <label for="maxPixelsPerTurn">Max Pixels Per Turn (0 = all available charges)</label>
+            <input type="number" id="maxPixelsPerTurn" min="0" value="0">
+            <label for="readyChargeThreshold">Start Painting When User Has At Least (charges)</label>
+            <input type="number" id="readyChargeThreshold" min="1" value="1">
             <label for="accountCheckCooldown">Account Check Cooldown (seconds)</label>
             <input type="number" id="accountCheckCooldown" min="0" value="0">
             <label for="dropletReserve">Minimum Droplets Before Buying</label>
